--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,3 @@
-
 name: Deploy Node Application
 
 on: 
@@ -12,20 +11,31 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
-      - name: Login to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}     
+
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Build Docker Image
-        run: docker build -t mamatha12345678/kcc-node  -f backend/Dockerfile backend
-      - name: Publish Image to docker hub
-        run: docker push mamatha12345678/kcc-node:latest 
- 
+        run: docker build -t mamatha12345678/kcc-node:latest -f backend/Dockerfile backend
+
+      - name: Publish Image to Docker Hub
+        run: docker push mamatha12345678/kcc-node:latest
+
   deploy:
     needs: build
-    runs-on: self-hosted 
+    runs-on: self-hosted
     steps:
-      - name: Pull image from docker hub
+      - name: Pull image from Docker Hub
         run: docker pull mamatha12345678/kcc-node:latest
+
       - name: Delete old container
-        run: docker rm -f nodejs-app-container  
+        run: docker rm -f nodejs-app-container || true
+
       - name: Run Docker Container
-        run: docker run -d -p 8000:8000 --name nodejs-app-container -e MONGO_URI='${{ secrets.MONGO_URI }}' -e JWT_SECRET='${{ secrets.JWT_SECRET }}' -e JWT_EXPIRE='${{ secrets.JWT_EXPIRE }}' -e PORT='${{ secrets.PORT }}' -e FRONTEND_URL='${{ secrets.FRONTEND_URL }}' mamatha12345678/kcc-node
+        run: docker run -d -p 8000:8000 --name nodejs-app-container \
+          -e MONGO_URI='${{ secrets.MONGO_URI }}' \
+          -e JWT_SECRET='${{ secrets.JWT_SECRET }}' \
+          -e JWT_EXPIRE='${{ secrets.JWT_EXPIRE }}' \
+          -e PORT='${{ secrets.PORT }}' \
+          -e FRONTEND_URL='${{ secrets.FRONTEND_URL }}' \
+          mamatha12345678/kcc-node:latest
