--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Deploy Node Applications
+name: Deploy Node Application
 
 on: 
   push:
@@ -16,9 +16,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: |
-          export DOCKER_BUILDKIT=1
-          docker build -t mamatha12345678/kcc-node -f backend/Dockerfile backend
+        run: docker build -t mamatha12345678/kcc-node -f backend/Dockerfile backend
 
       - name: Publish Image to Docker Hub
         run: docker push mamatha12345678/kcc-node:latest
