--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,6 +1,6 @@
 name: Deploy Node Application
 
-on: 
+on:
   push:
     branches:
       - main
@@ -16,24 +16,24 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t mamatha12345678/kcc-node -f backend/Dockerfile backend
+        run: sudo docker build -t mamatha12345678/kcc-node -f backend/Dockerfile backend
 
       - name: Publish Image to Docker Hub
-        run: docker push mamatha12345678/kcc-node:latest
+        run: sudo docker push mamatha12345678/kcc-node:latest
 
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
       - name: Pull Docker Image
-        run: docker pull mamatha12345678/kcc-node:latest
+        run: sudo docker pull mamatha12345678/kcc-node:latest
 
       - name: Remove Old Container (if exists)
-        run: docker rm -f nodejs-app-container || true
+        run: sudo docker rm -f nodejs-app-container || true
 
       - name: Run Docker Container
         run: |
-          docker run -d -p 8000:8000 --name nodejs-app-container \
+          sudo docker run -d -p 8000:8000 --name nodejs-app-container \
             -e MONGO_URI="${{ secrets.MONGO_URI }}" \
             -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
             -e JWT_EXPIRE="${{ secrets.JWT_EXPIRE }}" \
