--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,10 +16,12 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: sudo docker build -t mamatha12345678/kcc-node -f backend/Dockerfile backend
+        run: sudo docker build -t mamatha12345678/kcc-node:latest -t mamatha12345678/kcc-node:${{ github.sha }} -f backend/Dockerfile backend
 
-      - name: Publish Image to Docker Hub
-        run: sudo docker push mamatha12345678/kcc-node:latest
+      - name: Push Docker Image
+        run: |
+          sudo docker push mamatha12345678/kcc-node:latest
+          sudo docker push mamatha12345678/kcc-node:${{ github.sha }}
 
   deploy:
     needs: build
